--- a/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_BecomeADriverComponentPartial/Default.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_BecomeADriverComponentPartial/Default.cshtml
@@ -4,7 +4,7 @@
 		<div class="row justify-content-end">
 			<div class="col-md-6 heading-section heading-section-white ftco-animate">
 				<h2 class="mb-3">Aceleniz mi var? Araç sürmeye vaktiniz mi yok?</h2>
-				<a href="#" class="btn btn-primary btn-lg">Bir sürücü kiralayın!</a>
+				<a href="/RentADriver/Index" class="btn btn-primary btn-lg">Bir sürücü kiralayın!</a>
 			</div>
 		</div>
 	</div>
