--- a/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_ServiceComponentPartial/Default.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_ServiceComponentPartial/Default.cshtml
@@ -5,7 +5,7 @@
         <div class="row justify-content-center mb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
                 <span class="subheading">Hizmetler</span>
-                <h2 class="mb-3">Sizin İçin Hizmetlerimiz</h2>
+                <h2 class="mb-3">Sizi İçin Hizmetlerimiz</h2>
             </div>
         </div>
         <div class="row">
