14. Admin Tema Öncesi

--- a/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_BlogDetailsMainComponentPartial/Default.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_BlogDetailsMainComponentPartial/Default.cshtml
@@ -3,9 +3,9 @@
     <h2 class="mb-3">@Model.Title</h2>
     <p>@Model.Description</p>
 
-    @await Component.InvokeAsync("_BlogDetailsCloudTagByBlogComponentPartial")
+    @await Component.InvokeAsync("_BlogDetailsCloudTagByBlogComponentPartial", new { id = ViewBag.blogid })
 
-    @await Component.InvokeAsync("_BlogDetailsAuthorAboutComponentPartial")
+    @await Component.InvokeAsync("_BlogDetailsAuthorAboutComponentPartial", new { id = ViewBag.blogid })
 
 
     <div class="pt-5 mt-5">
