17. Blog İslemleri Oncesi

--- a/Frontends/UdemyCarBook.WebUI/Views/AdminCar/UpdateCar.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/AdminCar/UpdateCar.cshtml
@@ -54,7 +54,7 @@
                                 <label for="exampleInputBigImageUrl">Büyük Kapak Fotoğrafı</label>
                                 <input type="text" class="form-control" id="exampleInputBigImageUrl" asp-for="BigImageUrl" placeholder="Araç Detayında Gözükecek Kapak Fotoğraf Linki">
                             </div>
-                            <button type="submit" class="btn btn-primary waves-effect waves-light">Aracı Kaydet</button>
+                            <button type="submit" class="btn btn-success waves-effect waves-light">Aracı Kaydet</button>
                         </form>
 
                     </div> <!-- end card-body-->
