--- a/Frontends/UdemyCarBook.WebUI/Views/AdminLayout/AdminHeaderPartial.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/AdminLayout/AdminHeaderPartial.cshtml
@@ -1,6 +1,4 @@
-﻿<h1>Selamlar</h1>
-
-<head>
+﻿<head>
     <meta charset="utf-8" />
     <title>CarBook Admin Paneli</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
