--- a/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -13,4 +13,7 @@
 @using UdemyCarBook.Dto.FeatureDtos
 @using UdemyCarBook.Dto.BrandDtos
 @using UdemyCarBook.Dto.AuthorDtos
+@using UdemyCarBook.Dto.PricingDtos
+@using UdemyCarBook.Dto.LocationDtos
+@using UdemyCarBook.Dto.SocialMediaDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
