--- a/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/AdminStatistics/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/AdminStatistics/Index.cshtml
@@ -175,12 +175,12 @@
                             </h2>
                         </div>
                         <div class="col-4 text-right">
-                            <span class="text-white-50">57% <i class="mdi mdi-arrow-up"></i></span>
+                            <span class="text-white-50">@ViewBag.avgRentPriceForWeeklyRandom% <i class="mdi mdi-arrow-up"></i></span>
                         </div>
                     </div>
 
                     <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                        <div class="progress-bar bg-light" role="progressbar" style="width: 68%;"></div>
+                        <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.avgRentPriceForWeeklyRandom%;"></div>
                     </div>
                 </div>
             </div>
@@ -200,12 +200,12 @@
                             </h2>
                         </div>
                         <div class="col-4 text-right">
-                            <span class="text-white-50">17.8% <i class="mdi mdi-arrow-down"></i></span>
+                            <span class="text-white-50">@ViewBag.avgRentPriceForMonthlyRandom% <i class="mdi mdi-arrow-down"></i></span>
                         </div>
                     </div>
 
                     <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                        <div class="progress-bar bg-light" role="progressbar" style="width: 57%;"></div>
+                        <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.avgRentPriceForMonthlyRandom%;"></div>
                     </div>
                 </div>
             </div>
@@ -249,16 +249,16 @@
                     <div class="row d-flex align-items-center mb-4">
                         <div class="col-8">
                             <h2 class="d-flex align-items-center text-white mb-0">
-                                $1875.54
+                                @ViewBag.bBrandNameByMaxCar
                             </h2>
                         </div>
                         <div class="col-4 text-right">
-                            <span class="text-white-50">18.71% <i class="mdi mdi-arrow-down"></i></span>
+                            <span class="text-white-50">@ViewBag.bBrandNameByMaxCarRandom% <i class="mdi mdi-arrow-down"></i></span>
                         </div>
                     </div>
 
                     <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                        <div class="progress-bar bg-light" role="progressbar" style="width: 38%;"></div>
+                        <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.bBrandNameByMaxCarRandom%;"></div>
                     </div>
                 </div>
             </div>
@@ -274,16 +274,16 @@
                     <div class="row d-flex align-items-center mb-4">
                         <div class="col-8">
                             <h2 class="d-flex align-items-center text-white mb-0">
-                                $784.62
+                                @ViewBag.blogTitleByMaxBlogComment
                             </h2>
                         </div>
                         <div class="col-4 text-right">
-                            <span class="text-white-50">57% <i class="mdi mdi-arrow-up"></i></span>
+                            <span class="text-white-50">@ViewBag.blogTitleByMaxBlogCommentRandom% <i class="mdi mdi-arrow-up"></i></span>
                         </div>
                     </div>
 
                     <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                        <div class="progress-bar bg-light" role="progressbar" style="width: 68%;"></div>
+                        <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.blogTitleByMaxBlogCommentRandom%;"></div>
                     </div>
                 </div>
             </div>
@@ -377,16 +377,16 @@
                     <div class="row d-flex align-items-center mb-4">
                         <div class="col-8">
                             <h2 class="d-flex align-items-center text-white mb-0">
-                                $784.62
+                                @ViewBag.CarBrandAndModelByRentPriceDailyMax
                             </h2>
                         </div>
                         <div class="col-4 text-right">
-                            <span class="text-white-50">57% <i class="mdi mdi-arrow-up"></i></span>
+                            <span class="text-white-50">@ViewBag.CarBrandAndModelByRentPriceDailyMaxRandom% <i class="mdi mdi-arrow-up"></i></span>
                         </div>
                     </div>
 
                     <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                        <div class="progress-bar bg-light" role="progressbar" style="width: 68%;"></div>
+                        <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.CarBrandAndModelByRentPriceDailyMaxRandom%;"></div>
                     </div>
                 </div>
             </div>
@@ -402,16 +402,16 @@
                     <div class="row d-flex align-items-center mb-4">
                         <div class="col-8">
                             <h2 class="d-flex align-items-center text-white mb-0">
-                                1,15,187
+                                @ViewBag.CarBrandAndModelByRentPriceDailyMin
                             </h2>
                         </div>
                         <div class="col-4 text-right">
-                            <span class="text-white-50">17.8% <i class="mdi mdi-arrow-down"></i></span>
+                            <span class="text-white-50">@ViewBag.CarBrandAndModelByRentPriceDailyMinRandom% <i class="mdi mdi-arrow-down"></i></span>
                         </div>
                     </div>
 
                     <div class="progress badge-soft-light shadow-sm" style="height: 7px;">
-                        <div class="progress-bar bg-light" role="progressbar" style="width: 57%;"></div>
+                        <div class="progress-bar bg-light" role="progressbar" style="width: @ViewBag.CarBrandAndModelByRentPriceDailyMinRandom%;"></div>
                     </div>
                 </div>
             </div>
