--- a/Frontends/UdemyCarBook.WebUI/Views/AdminLayout/AdminSidebarPartial.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/AdminLayout/AdminSidebarPartial.cshtml
@@ -17,10 +17,9 @@
             <!-- Left Menu Start -->
             <ul class="metismenu list-unstyled" id="side-menu">
                 <li class="menu-title">Menü</li>
-
-                <li><a href="#" class="waves-effect"><i class="feather-airplay"></i><span>Dashboard</span></a></li>
-                <li><a href="#" class="waves-effect"><i class="fas fa-chart-pie"></i><span>İstatistikler</span></a></li>
                 <li><a href="/Default/Index" class="waves-effect"><i class="fas fa-home"></i><span>Siteye Git</span></a></li>
+                <li><a href="#" class="waves-effect"><i class="feather-airplay"></i><span>Dashboard</span></a></li>
+                <li><a href="/Admin/AdminStatistics/Index/" class="waves-effect"><i class="fas fa-chart-pie"></i><span>İstatistikler</span></a></li>
                 <li><a href="/AdminCar/Index/" class="waves-effect"><i class="fas fa-car"></i><span>Araba İşlemleri</span></a></li>
                 <li><a href="/AdminFeature/Index/" class="waves-effect"><i class="fas fa-bus"></i><span>Araba Özellikleri</span></a></li>
                 <li><a href="/AdminBrand/Index/" class="waves-effect"><i class="mdi mdi-playlist-star"></i><span>Markalar</span></a></li>
@@ -40,7 +39,6 @@
                 <li><a href="#" class="waves-effect"><i class="fas fa-hashtag"></i><span>Etiket Bulutu</span></a></li>
                 <li><a href="#" class="waves-effect"><i class="mdi mdi-settings"></i><span>Ayarlar</span></a></li>
                 <li><a href="#" class="waves-effect"><i class="mdi mdi-logout"></i><span>Çıkış Yap</span></a></li>
-
             </ul>
         </div>
         <!-- Sidebar -->
