--- a/Frontends/UdemyCarBook.WebUI/Views/Default/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Default/Index.cshtml
@@ -1,7 +1,8 @@
-﻿
+﻿@using UdemyCarBook.Dto.LocationDtos
+@model ResultLocationDto
 @{
-    ViewData["Title"] = "Index";
-    Layout = null;
+	ViewData["Title"] = "Index";
+	Layout = null;
 }
 
 <!DOCTYPE html>
@@ -10,100 +11,100 @@
 @await Component.InvokeAsync("_HeadUILayoutComponentPartial")
 <body>
 
-    @await Component.InvokeAsync("_NavbarUILayoutComponentPartial")
-    <!-- END nav -->
+	@await Component.InvokeAsync("_NavbarUILayoutComponentPartial")
+	<!-- END nav -->
+	@await Component.InvokeAsync("_DefaultCoverUILayoutComponentPartial")
 
-    @await Component.InvokeAsync("_DefaultCoverUILayoutComponentPartial")
+	<section class="ftco-section ftco-no-pt bg-light">
+		<div class="container">
+			<div class="row no-gutters">
+				<div class="col-md-12	featured-top">
+					<div class="row no-gutters">
+						<div class="col-md-4 d-flex align-items-center">
+							<form method="post" class="request-form ftco-animate bg-primary">
+								<h2>Şimdi Aracınızı Kiralayın</h2>
+								<div class="form-group">
+									<label for="" class="label">Alınmak İstenen Lokasyon</label>
+									@Html.DropDownListFor(x => x.LocationID, (List<SelectListItem>)ViewBag.v, new { @class = "form-control", name = "locationID" })
+								</div>
+								<div class="d-flex">
+									<div class="form-group mr-2">
+										<label for="" class="label">Alınmak İstenen Tarih</label>
+										<input type="text" class="form-control" name="book_pick_date" id="book_pick_date" placeholder="Date">
+									</div>
+									<div class="form-group ml-2">
+										<label for="" class="label">İade Tarihi</label>
+										<input type="text" class="form-control" name="book_off_date" id="book_off_date" placeholder="Date">
+									</div>
+								</div>
+								<div class="form-group">
+									<label for="" class="label">İade Saati</label>
+									<input type="text" class="form-control" name="time_pick" id="time_pick" placeholder="Time">
+								</div>
+								<div class="form-group">
+									<label for="" class="label">İade Saati</label>
+									<input type="text" class="form-control" name="time_off" id="time_off" placeholder="Time">
+								</div>
+								<div class="form-group">
+									<button class="btn btn-secondary py-3 px-4"> Uygun Araçları Listele</button>
+								</div>
+							</form>
+						</div>
+						<div class="col-md-8 d-flex align-items-center">
+							<div class="services-wrap rounded-right w-100">
+								<h3 class="heading-section mb-4">Araç Kiralamanın En Basit Yolu</h3>
+								<div class="row d-flex mb-4">
+									<div class="col-md-4 d-flex align-self-stretch ftco-animate">
+										<div class="services w-100 text-center">
+											<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-route"></span></div>
+											<div class="text w-100">
+												<h3 class="heading mb-2">Almak İstediğin Konumu Seç</h3>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-4 d-flex align-self-stretch ftco-animate">
+										<div class="services w-100 text-center">
+											<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-handshake"></span></div>
+											<div class="text w-100">
+												<h3 class="heading mb-2">En İyi Uygun Araçları Gör</h3>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-4 d-flex align-self-stretch ftco-animate">
+										<div class="services w-100 text-center">
+											<div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-rent"></span></div>
+											<div class="text w-100">
+												<h3 class="heading mb-2">Araç Kiralamayı Tamamla, Hepsi Bu!</h3>
+											</div>
+										</div>
+									</div>
+								</div>
+								<p><a href="#" class="btn btn-primary py-3 px-4">Reserve Your Perfect Car</a></p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
-    <section class="ftco-section ftco-no-pt bg-light">
-        <div class="container">
-            <div class="row no-gutters">
-                <div class="col-md-12	featured-top">
-                    <div class="row no-gutters">
-                        <div class="col-md-4 d-flex align-items-center">
-                            <form action="#" class="request-form ftco-animate bg-primary">
-                                <h2>Make your trip</h2>
-                                <div class="form-group">
-                                    <label for="" class="label">Pick-up location</label>
-                                    <input type="text" class="form-control" placeholder="City, Airport, Station, etc">
-                                </div>
-                                <div class="form-group">
-                                    <label for="" class="label">Drop-off location</label>
-                                    <input type="text" class="form-control" placeholder="City, Airport, Station, etc">
-                                </div>
-                                <div class="d-flex">
-                                    <div class="form-group mr-2">
-                                        <label for="" class="label">Pick-up date</label>
-                                        <input type="text" class="form-control" id="book_pick_date" placeholder="Date">
-                                    </div>
-                                    <div class="form-group ml-2">
-                                        <label for="" class="label">Drop-off date</label>
-                                        <input type="text" class="form-control" id="book_off_date" placeholder="Date">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <label for="" class="label">Pick-up time</label>
-                                    <input type="text" class="form-control" id="time_pick" placeholder="Time">
-                                </div>
-                                <div class="form-group">
-                                    <input type="submit" value="Rent A Car Now" class="btn btn-secondary py-3 px-4">
-                                </div>
-                            </form>
-                        </div>
-                        <div class="col-md-8 d-flex align-items-center">
-                            <div class="services-wrap rounded-right w-100">
-                                <h3 class="heading-section mb-4">Better Way to Rent Your Perfect Cars</h3>
-                                <div class="row d-flex mb-4">
-                                    <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-                                        <div class="services w-100 text-center">
-                                            <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-route"></span></div>
-                                            <div class="text w-100">
-                                                <h3 class="heading mb-2">Choose Your Pickup Location</h3>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-                                        <div class="services w-100 text-center">
-                                            <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-handshake"></span></div>
-                                            <div class="text w-100">
-                                                <h3 class="heading mb-2">Select the Best Deal</h3>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4 d-flex align-self-stretch ftco-animate">
-                                        <div class="services w-100 text-center">
-                                            <div class="icon d-flex align-items-center justify-content-center"><span class="flaticon-rent"></span></div>
-                                            <div class="text w-100">
-                                                <h3 class="heading mb-2">Reserve Your Rental Car</h3>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <p><a href="#" class="btn btn-primary py-3 px-4">Reserve Your Perfect Car</a></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    </section>
+	@await Component.InvokeAsync("_DefaultLast5CarsWithBrandsComponentPartial")
 
-    @await Component.InvokeAsync("_DefaultLast5CarsWithBrandsComponentPartial")
+	@await Component.InvokeAsync("_AboutUsComponentPartial");
 
-    @await Component.InvokeAsync("_AboutUsComponentPartial");
+	@await Component.InvokeAsync("_ServiceComponentPartial");
 
-    @await Component.InvokeAsync("_ServiceComponentPartial");
+	@await Component.InvokeAsync("_BecomeADriverComponentPartial");
 
-    @await Component.InvokeAsync("_BecomeADriverComponentPartial");
+	@await Component.InvokeAsync("_TestimonialComponentPartial");
 
-    @await Component.InvokeAsync("_TestimonialComponentPartial");
+	@await Component.InvokeAsync("_GetLast3BlogsWithAuthorListViewComponentPartial");
 
-    @await Component.InvokeAsync("_GetLast3BlogsWithAuthorListViewComponentPartial");
+	@await Component.InvokeAsync("_DefaultStatisticsComponentPartial");
 
-    @await Component.InvokeAsync("_DefaultStatisticsComponentPartial");
+	@await Component.InvokeAsync("_FooterUILayoutComponentPartial")
 
-    @await Component.InvokeAsync("_FooterUILayoutComponentPartial")
-
-    @await Component.InvokeAsync("_ScriptUILayoutComponentPartial")
+	@await Component.InvokeAsync("_ScriptUILayoutComponentPartial")
 </body>
 </html>
 
