225. Footer İslemleri Oncesi

--- a/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_FooterUILayoutComponentPartial/Default.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_FooterUILayoutComponentPartial/Default.cshtml
@@ -1,10 +1,12 @@
-﻿<footer class="ftco-footer ftco-bg-dark ftco-section">
+﻿@model List<ResultFooterAddressDto>
+@foreach(var item in Model){
+<footer class="ftco-footer ftco-bg-dark ftco-section">
     <div class="container">
         <div class="row mb-5">
             <div class="col-md">
                 <div class="ftco-footer-widget mb-4">
                     <h2 class="ftco-heading-2"><a href="#" class="logo">Car<span>book</span></a></h2>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <p>@item.Description</p>
                     <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                         <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
                         <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -41,9 +43,9 @@
                     <h2 class="ftco-heading-2">Bir sorunuz mu var?</h2>
                     <div class="block-23 mb-3">
                         <ul>
-                            <li><span class="icon icon-map-marker"></span><span class="text">İstanbul, TR</span></li>
-                            <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-                            <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+                            <li><span class="icon icon-map-marker"></span><span class="text">@item.Address</span></li>
+                            <li><span class="icon icon-phone"></span><span class="text">@item.PhoneNumber</span></li>
+                            <li><span class="icon icon-envelope"></span><span class="text">@item.Email</span></li>
                         </ul>
                     </div>
                 </div>
@@ -63,3 +65,4 @@
 </footer>
 
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
+}
