--- a/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_BlogDetailsMainComponentPartial/Default.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_BlogDetailsMainComponentPartial/Default.cshtml
@@ -9,8 +9,10 @@
 
 
     <div class="pt-5 mt-5">
-        <h3 class="mb-5">6 Yorum</h3>
-        @await Component.InvokeAsync("_CommentListByBlogComponentPartial")
+        <h3 class="mb-5">@ViewBag.commentCount Yorum</h3>
+
+        @await Component.InvokeAsync("_CommentListByBlogComponentPartial", new { id = ViewBag.blogid })
+
         @await Component.InvokeAsync("_AddCommentComponentPartial")
     </div>
 
