--- a/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -17,4 +17,5 @@
 @using UdemyCarBook.Dto.LocationDtos
 @using UdemyCarBook.Dto.SocialMediaDtos
 @using UdemyCarBook.Dto.ReservationDtos
+@using UdemyCarBook.Dto.CarFeatureDtos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
