--- a/Frontends/UdemyCarBook.WebUI/Views/CarPricing/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/CarPricing/Index.cshtml
@@ -24,7 +24,7 @@
 							<tr class="">
 								<td class="car-image"><div class="img" style="background-image:url(@item.CoverImageUrl);"></div></td>
 								<td class="product-name">
-									<h3>@item.Model</h3>
+									<h3>@item.Brand @item.Model</h3>
 									<p class="mb-0 rated">
 										<span>Puanı:</span>
 										<span class="ion-ios-star"></span>
