--- a/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_BlogDetailsMainComponentPartial/Default.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Views/Shared/Components/_BlogDetailsMainComponentPartial/Default.cshtml
@@ -13,7 +13,8 @@
 
         @await Component.InvokeAsync("_CommentListByBlogComponentPartial", new { id = ViewBag.blogid })
 
-        @await Component.InvokeAsync("_AddCommentComponentPartial")
+        @* @await Component.InvokeAsync("_AddCommentComponentPartial") *@
+        @await Html.PartialAsync("~/Views/Blog/AddComment.cshtml", new { id = ViewBag.blogid })
     </div>
 
 </div>
