Dashboard Blog Listesi Oncesi

--- a/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/AdminStatistics/Index.cshtml
+++ b/Frontends/UdemyCarBook.WebUI/Areas/Admin/Views/AdminStatistics/Index.cshtml
@@ -371,7 +371,7 @@
             <div class="card bg-warning border-warning">
                 <div class="card-body">
                     <div class="mb-4">
-                        <span class="badge badge-soft-light float-right">Günlük Kiralama Fiyatı</span>
+                        <span class="badge badge-soft-light float-right">En Pahalı</span>
                         <h5 class="card-title mb-0 text-white">En Pahalı Araç</h5>
                     </div>
                     <div class="row d-flex align-items-center mb-4">
@@ -396,8 +396,8 @@
             <div class="card bg-info border-info">
                 <div class="card-body">
                     <div class="mb-4">
-                        <span class="badge badge-soft-light float-right">Günlük Kiralama Fiyatı</span>
-                        <h5 class="card-title mb-0 text-white">En Ucuz</h5>
+                        <span class="badge badge-soft-light float-right">En Ucuz</span>
+                        <h5 class="card-title mb-0 text-white">En Ucuz Araç</h5>
                     </div>
                     <div class="row d-flex align-items-center mb-4">
                         <div class="col-8">
